
####   Don't forget to change the version number in configure.ac!   ####

25 Feb 2005 Another 3480-X'DB' Fix. Tape does not need to be ready
            for a X'DB' to work. Hinted by John Decker - Ivan Warren
25 Feb 2005 Fix het block count bug introduced by my earlier SCSI changes;
            John Decker (and Andy Styles) by Fish (thanks guys!)
25 Feb 2005 Remove C99 Struct init from ecpsvm for MSVC support - Ivan Warren
23 Feb 2005 Hopefully fixed last cmpsc bugs ;-) - Bernard van der Helm
22 Feb 2005 suspend fix for resume loop - Greg Smith
22 Feb 2005 Fix for "invalid command in 3270 data stream" - John Decker
19 Feb 2005 ECPS:VM Fix : Another CPA/SCNRU Fix - Ivan Warren
16 Feb 2005 ECPS:VM Fix : Revalidate AIA after changing IA - Ivan Warren
16 Feb 2005 ECPS:VM Fix : Bug in CPA/SCNRU - Ivan Warren
14 Jan 2005 Added '*' comment command as official do-nothing command - Fish
14 Feb 2005 Add zArch (64-bit mode) support to UPT (Update Tree)
            and CFC (Compare and Form Codeword) instructions - Fish
07 Feb 2005 Make logmsg/p/b functions not macros - Roger Bowler
05 Feb 2005 CMPSC 64bit fix + typo - Bernard van der Helm
05 Feb 2005 Begin MSVC compiler support - Roger Bowler
13 Jan 2005 Optmization to instruction fetch for unrolled execute - Greg Smith
13 Jan 2005 AMD64 assembler assists - Bob Deblier by Greg
05 Jan 2005 Fix dasdcopy bug for output ckd file - Greg Smith
02 Jan 2005 Bug fix 14dec05 fixed - Bernard van der Helm
02 Jan 2005 Add integrated 1052/3215 consoles - Jan Jaeger
29 Dec 2004 3480 Modeset (X'DB') has 1 byte of data - Ivan Warren
28 Dec 2004 Set reserved VOL1 fields to blanks - Greg Smith
26 Dec 2004 Initialize guestsregs->ints_state in SIE - Greg Smith
25 Dev 2004 Allow use of 'symbols' for panel commands - Ivan Warren
24 Dec 2004 sie perf update attempt (again).. Merry Xmas - Ivan Warren
23 Dec 2004 Fix SCSI mountreq/unmountreq tests in ReqAutoMount - Fish
22 Dec 2004 Fix to cc in CUUTF and CUTFU instruction - Greg